-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 5.0.0-rc1
-
4d72cb55ba (qt-creator/qt-creator/master) 4d72cb55ba (qt-creator/qt-creator/9.0)
Projects mode has a new view on its right side. I understand that is only for output from CMake. Please correct me if I'm wrong.
If it is, displaying it for qmake- and qbs-based projects is pointless. Please hide it automatically or at least give users a chance to disable it.
- is duplicated by
-
QTCREATORBUG-27757 Allow hiding CMake output in Projects mode
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-26069 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 420100,3 | Projects mode: Use "Show Right Sidebar" action to toggle build output | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |