Projects mode: Use "Show Right Sidebar" action to toggle build output

For users who want the full area for the configuration widgets or don't
see output there because their build system doesn't put it there.

Fixes: QTCREATORBUG-26069
Change-Id: I4ffa73be88e5c7cc058227bc681f87e4c0a642bd
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>